# fakekey

./: .gitignore  Cargo.toml  LICENSE  PROJECT_SUMMARY.md  README.md  README_CN.md  RELEASE_CHECKLIST.md  design.md  fakekey-0.1.0.crate  install.sh  test_install.sh  test_install_simple.sh
.github/workflows/: release.yml
examples/: quick_start.sh
homebrew/: fakekey.rb
scripts/: release.sh
src/: audit.rs  cert.rs  cli.rs  config.rs  daemon.rs  key_handler.rs  keychain.rs  lib.rs  main.rs  proxy.rs  security.rs  templates.rs  tool_launcher.rs
tests/: integration_test.rs
